# D-router

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  readme.md  run.sh
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/DSP/: MultiChannelPluginHost.cpp  MultiChannelPluginHost.h  MultiChannelPluginHost.mm  PluginHost.cpp  PluginHost.h  PluginHost.mm
Source/DSP/Builtin/: BuiltinProcessors.h  CoreAudioAacWriter.cpp  CoreAudioAacWriter.h  DeEsserEditor.h  DeEsserMath.h  InternalPluginFormat.cpp  InternalPluginFormat.h  LevelRiderEditor.h  NoiseGenerators.h  ParametricEqEditor.h  RecorderEditor.h  RecorderNaming.h  RecorderProcessor.h  ResonanceSuppressorProcessor.h  SpectralAutoEqProcessor.h  SpectralProcessor.h  StereoFreqAnalyzer.h  StereoMeterEditor.h  StereoMeterEditor.mm  StereoMeterMath.h  StereoMeterProcessor.h
Source/Diagnostics/: AppNap.h  AppNap.mm  CrashHandler.mm  Logger.cpp  PerfMonitor.cpp  PerfMonitor.h
Source/Engine/: AppAudioProcesses.h  AppAudioProcesses.mm  AppAudioWorker.h  AppAudioWorker.mm  AppInputResolver.h  AudioEngine.cpp  AudioEngine.h  DeviceRateChoice.h  DeviceVolume.cpp  DeviceVolume.h  DeviceWorker.cpp  DeviceWorker.h  EngineSettings.h  FormatRestartGuard.h  InputSource.h  MatrixInputPlan.h  MatrixProcessor.cpp  MatrixProcessor.h  PdcPlan.h  ReconfigurationController.cpp  ReconfigurationController.h  RingAutoSize.h  RingBuffer.h  SampleRateConverter.cpp  SampleRateConverter.h  SystemAudioDevices.cpp  SystemAudioDevices.h
Source/Persistence/: SettingsStore.cpp  SettingsStore.h  SnapshotStore.cpp  SnapshotStore.h
Source/Routing/: GroupGain.h  InputGroupManager.cpp  InputGroupManager.h  OutputGroup.h  OutputGroupManager.cpp  OutputGroupManager.h  RoutingMatrix.cpp  RoutingMatrix.h
Source/UI/: Crosspoint.cpp  Crosspoint.h  CrosspointGrid.cpp  CrosspointGrid.h  DeviceManagerDialog.cpp  DeviceManagerDialog.h  DeviceVolumePanel.cpp  DeviceVolumePanel.h  Eased.h  GroupManagerDialog.cpp  GroupManagerDialog.h  LevelMeter.cpp  LevelMeter.h  LookAndFeel.cpp  LookAndFeel.h  MatrixView.cpp  MatrixView.h  OutputGroupPanel.cpp  OutputGroupPanel.h  PluginBrowserDialog.cpp  PluginBrowserDialog.h  PluginEditorWindow.cpp  PluginEditorWindow.h  PluginEditorWindow.mm  SettingsDialog.cpp  SettingsDialog.h  StatusPanel.cpp  StatusPanel.h  ZDFace.h
Source/Update/: UpdateInstaller.cpp
docs/superpowers/plans/: 2026-06-21-github-auto-update.md  2026-06-22-stereo-meter-hf-axis.md  2026-06-22-system-default-device-picker.md  2026-06-23-app-audio-input-part2.md  2026-06-23-app-audio-input-part3a.md  2026-06-23-app-audio-input-part3b.md  2026-06-23-app-audio-input.md  2026-06-23-recorder-plugin.md  2026-06-25-asrc-phase1-output.md  2026-06-25-asrc-phase2-freerunning.md  2026-06-29-plugin-window-scale-and-stereo-meter-2d.md
docs/superpowers/specs/: 2026-06-21-github-auto-update-design.md  2026-06-21-resonance-suppressor-autoeq-design.md  2026-06-22-stereo-meter-design.md  2026-06-22-stereo-meter-hf-axis-design.md  2026-06-22-system-default-device-picker-design.md  2026-06-23-app-audio-input-design.md  2026-06-23-recorder-plugin-design.md  2026-06-25-asrc-design.md  2026-06-26-stereo-output-autogroup-design.md  2026-06-29-plugin-window-scale-and-stereo-meter-2d-design.md  2026-07-01-ui-animations-design.md
tests/: CoreLogicTests.cpp  test_main.cpp
tests/juce/: SnapshotStoreTests.cpp  SpectralProcessorTests.cpp  ToneNoiseTests.cpp
